# jobs-candidates-api

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  covreport.txt  docker-compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  main.py  requirements.txt
app/api/: di.py  routes.py
app/common/: config.py  entities.py
app/es_lib/: __init__.py  elastic_search_client.py  exceptions.py
app/repositories/: __init__.py  candidates.py  hit.py  jobs.py
seed_image/: Dockerfile  populate_es_indices.py
tests/: conftest.py  test_api.py
